# bifrost

./: .editorconfig  .env.bot.example  .gitattributes  .gitignore  Jenkinsfile  Makefile  README.md  bifrost_b_architecture_claude_prompt.md  build.gradle  build.gradle.kts  docker-compose.yml  main.py  requirements.txt  settings.gradle  settings.gradle.kts
services/ai-service/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  build.gradle  build.gradle.kts  pyproject.toml
services/ai-service/alembic/: env.py
services/ai-service/app/: __init__.py  config.py  main.py
services/ai-service/corpus/: manifest.json
services/ai-service/eval/: __init__.py
services/ai-service/helm/: Chart.yaml  values.yaml
services/ai-service/scripts/: backfill_gold_set.py  corpus_seed.py  rca_eval_campaign.py
services/ai-service/tests/: test_action_execution.py  test_agentic_loop.py  test_analysis_loopback.py  test_approval_header_wiring.py  test_backfill_gold_set.py  test_calibration.py  test_catalog_docs_consistency.py  test_change_ticket_window_rename.py  test_classifier.py  test_conversation_memory.py  test_corpus_seed.py  test_embedder.py  test_eval_accuracy.py  test_evidence_signals.py  test_execution_depth.py  test_gold_set.py  test_health.py  test_health_dependencies.py  test_hitl_wiring.py  test_incident_workflow.py  test_indexer.py  test_internal_ops_token_header.py  test_kedb.py  test_knowledge_seed.py  test_online_feedback_drift.py  test_persistence.py  test_planner_intent_guardrail.py  test_planner_keywords_traces.py  test_planner_llm_routing.py  test_rca.py  (+43 more)
(+1042 files in other folders)
