[project]
name = "bifrost-ai-service"
version = "0.1.0"
description = "Bifrost AI Agent Server (FastAPI) — evidence 기반 Kafka 파이프라인 장애대응. 운영 리소스는 Spring /internal/ops로 위임."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",  # 동기 alembic 마이그레이션용 드라이버 (런타임 풀은 asyncpg)
    "openai>=2.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
